--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 # Glob
 
 env:
-  - CABALVER=1.22.5 GHCVERT=7.10.3
+  - CABALVER=1.22.5.0 GHCVERT=7.10.3
 
 before_install:
   - "sudo add-apt-repository -y ppa:hvr/ghc"
-  - "sudo apt-get update && sudo apt-get install --no-install-recommends texlive-xetex latex-xcolor texlive-fonts-recommended texlive-latex-extra lmodern texlive-latex-recommended"
-  - "sudo apt-get install ttf-wqy-microhei ttf-wqy-zenhei"
+  - "sudo apt-get update"
   - "sudo apt-get install ghc-$GHCVER cabal-install-$CABALVER"
   - "export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH"
   - "cabal update"
