--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 # Glob
 
 env:
-  - CABALVER=1.22 GHCVERT=7.10.2
+  - CABALVER=1.22 GHCVER=7.10.3
 
 before_install:
   - "sudo add-apt-repository -y ppa:hvr/ghc"
