--- a/Glob.cabal
+++ b/Glob.cabal
@@ -36,7 +36,7 @@ flag with-tls
   default:           False
 
 executable launch.simple
-  main-is:           Main.lhs
+  main-is:           Main.hs
   hs-source-dirs:    launch.bin/simple
                    , lib
   if flag(launch-simple)
