--- a/Glob.cabal
+++ b/Glob.cabal
@@ -70,6 +70,8 @@ executable launch.simple
   if flag(with-tls)
     cpp-options:     -DWithTls
 
+  other-modules:    Main.CmdArgs
+
 executable launch.docker
   main-is:           Main.hs
   hs-source-dirs:    launch.bin/docker
