--- a/Glob.cabal
+++ b/Glob.cabal
@@ -2,7 +2,7 @@
 -- see http://haskell.org/cabal/users-guide/
 
 name:                Glob
-version:             0.0.1.60
+version:             0.0.1.70
 synopsis:            A simple blog system.
 -- description:
 -- license:
@@ -196,3 +196,4 @@ executable glob
                    , Glob.Tls
 
   default-language:  Haskell2010
+  ghc-options:       -Wall -O2 -threaded
