--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
-# For Haskell
-*.hi
-*.o
-dist
-cabal.sandbox.config
-.cabal-sandbox
-config.json
-ssl.csr
-ssl.key
-ssl.crt
-bin.src/client_session_key.aes
+# Node rules:
+## Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
+.grunt
+
+## Dependency directory
+## Commenting this out is preferred by some people, see
+## https://docs.npmjs.com/misc/faq#should-i-check-my-node_modules-folder-into-git
+node_modules
+
+# Book build output
+_book
+
+# eBook build output
+*.epub
+*.mobi
+*.pdf
