--- a/Glob.cabal
+++ b/Glob.cabal
@@ -22,6 +22,9 @@ extra-source-files:  README.md
                    , database/script.sql
                    , database/function.sql
                    , resource/favicon.ico
+                   , src/Glob/QQ/glob.route
+                   , src/Glob/QQ/layout.hamlet
+                   , src/Glob/QQ/management.route
 
 flag unlimit-version
   description:       不对版本进行限制，已解决一些应为版本带来的问题。
@@ -212,6 +215,12 @@ executable glob
                    , Glob
                    , Glob.Config
                    , Glob.Tls
+                   , Glob.Common
+                   , Glob.Database
+                   , Glob.Data
+                   , Glob.Management
+                   , Glob.Management.Data
+                   , Glob.Management.TH
 
   default-language:  Haskell2010
   ghc-options:       -Wall -O2 -threaded
