--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -11,11 +11,7 @@ RUN wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-k
 RUN apt-get update
 RUN apt-get -y install postgresql-server-dev-9.4
 RUN cabal update
-RUN cd /src && cabal install directory process
-RUN cd /src && cabal install yesod -j9
-RUN cd /src && cabal install persistent-postgresql -j9
-RUN cd /src && cabal install warp-tls
-RUN cd /src && cabal install cmdargs
+RUN cd /src && cabal install -j9 directory process persistent-template yesod persistent-postgresql  warp-tls cmdargs
 RUN cd /src && cabal install -flaunch-docker
 RUN cp /src/.cabal-sandbox/bin/* /usr/bin
 RUN rm -r src
