--- a/dockerfiles/DaoCloud/Dockerfile
+++ b/dockerfiles/DaoCloud/Dockerfile
@@ -1,9 +1,8 @@
 FROM index.docker.io/library/haskell:7.10.2
 MAINTAINER qinka
 ADD . /src
-RUN ls -a /src
-RUN ls -a /src/resource
 RUN cp /src/resource/favicon.ico /favicon.ico
+RUN echo "image/x-ico" > /favicon.ico.mime
 RUN cd /src && cabal sandbox init
 RUN apt-get update && apt-get -y install wget
 RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ trusty-pgdg main" > /etc/apt/sources.list.d/pgdg.list
