--- a/Glob.cabal
+++ b/Glob.cabal
@@ -2,7 +2,7 @@
 -- see http://haskell.org/cabal/users-guide/
 
 name:                Glob
-version:             0.0.6.68
+version:             0.0.6.69
 synopsis:            A simple blog system.
 description:         A small and simple blog framework.
 license:             AgasaLicense
@@ -25,6 +25,7 @@ extra-source-files:  README.md
                    , src/Glob/QQ/glob.route
                    , src/Glob/QQ/layout.hamlet
                    , src/Glob/QQ/management.route
+                   , src/Glob/QQ/database
 
 flag unlimit-version
   description:       不对版本进行限制，已解决一些应为版本带来的问题。
@@ -224,6 +225,8 @@ executable glob
                    , Glob.Management
                    , Glob.Management.Data
                    , Glob.Management.TH
+                   , Glob.Static
+                   , Glob.Auth
 
   default-language:  Haskell2010
   ghc-options:       -Wall -O2 -threaded
