--- a/Glob.cabal
+++ b/Glob.cabal
@@ -44,6 +44,14 @@ flag with-tls
   description:       Use tls.
   default:           False
 
+flag with-postgresql
+  description:       Use PostgreSQL for database
+  default:           False
+
+flag with-mongodb
+  description:       Use MongoDB for database
+  default:           False
+
 executable launch.simple
   main-is:           Main.hs
   hs-source-dirs:    src.bin/launch.simple
