--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,17 @@ before_install:
   - "sudo apt-get install ghc-$GHCVER cabal-install-$CABALVER"
   - "export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH"
   - "cabal update"
-  - "cabal install -j9 directory process persistent-template yesod persistent-postgresql  warp-tls cmdargs SHA"
+  - "cabal install -j9 directory process persistent-template yesod persistent-postgresql persistent-mongoDB warp-tls cmdargs SHA"
 script:
   - cabal configure -flaunch-docker
   - cabal build
   - cabal sdist
-  - cabal install dist/Glob-*.tar.gz
-  - cabal install dist/Glob-*.tar.gz -flaunch-docker -flaunch-simple
-  - cabal install dist/Glob-*.tar.gz -fwith-tls
+  - cabal install dist/Glob-*.tar.gz -fwith-postgresql
+  - cabal install dist/Glob-*.tar.gz -fwith-mongodb
+  - cabal install dist/Glob-*.tar.gz -flaunch-docker -flaunch-simple -fwith-postgresql
+  - cabal install dist/Glob-*.tar.gz -fwith-tls -fwith-postgresql
+  - cabal install dist/Glob-*.tar.gz -flaunch-docker -flaunch-simple -fwith-mongodb
+  - cabal install dist/Glob-*.tar.gz -fwith-tls -fwith-mongodb
 after_script:
   -
 after_sucess: |
