--- a/dockerfiles/DaoCloud/Dockerfile
+++ b/dockerfiles/DaoCloud/Dockerfile
@@ -8,8 +8,8 @@ RUN apt-get update && apt-get -y install wget
 RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ trusty-pgdg main" > /etc/apt/sources.list.d/pgdg.list
 RUN wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
 RUN apt-get update && apt-get -y install postgresql-server-dev-9.4
-RUN cd /src && cabal update && cabal install -j9 directory process persistent-template yesod persistent-postgresql  warp-tls cmdargs
-RUN cd /src && cabal install -flaunch-docker
+RUN cd /src && cabal update && cabal install -j9 directory process persistent-template yesod persistent-postgresql warp-tls cmdargs
+RUN cd /src && cabal install -flaunch-docker -fwith-postgresql
 RUN cp /src/.cabal-sandbox/bin/* /usr/bin
 RUN rm -r src
 EXPOSE 3000
