--- a/stack.yaml
+++ b/stack.yaml
@@ -8,7 +8,11 @@ resolver: lts-5.6
 packages:
 - '.'
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
-extra-deps: []
+extra-deps:
+  - aeson-0.10.0.0
+  - process-1.4.2.0
+  - persistent-mongoDB-2.1.4
+  - yesod-core-1.4.19
 
 # Override default flag values for local packages and extra-deps
 flags:
