--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@
 
 env:
   - CABALVER=1.22 GHCVER=7.10.3
+services:
+  - docker
 
 before_install:
   - "sudo add-apt-repository -y ppa:hvr/ghc"
@@ -23,35 +25,4 @@ script:
 after_script:
   -
 after_sucess: |
-  if [ -n "$GITHUB_API_KEY" ]; then
-    git config --global user.name "travis_auto"
-    git config --global user.email "qinka@live.com"
-    echo '\nconfig done\n'
-    cd ~
-    git clone https://qinka:$GITHUB_API_KEY@github.com/Release.git
-    echo "clone done"
-    cd Release/Glob
-    ls
-    pwd
-    export RELPATH=$(pwd)
-    ls
-    pwd
-    cd "$TRAVIS_BUILD_DIR"/src
-    ls
-    pwd
-    echo "copy done"
-    cd "$TRAVIS_BUILD_DIR"/dist
-    cp *.tar.gz $RELPATH
-    cd $RELPATH
-    echo " " >> ChangeLog.md
-    echo "$(date)" >>ChangeLog.md
-    echo " " >> ChangeLog.md
-    echo "Travis-CI build Glob's new push."
-    git add .
-    git commit -am"$(date)"
-    echo "commit done"
-    git push origin master
-    cd ~
-    sudo rm -rf $RELPATH
-    cd "$TRAVIS_BUILD_DIR"
-  fi
+  echo "There should build a docker image."
