--- a/.travis.yml
+++ b/.travis.yml
@@ -26,3 +26,7 @@ after_script:
   -
 after_sucess: |
   echo "There should build a docker image."
+  rm -rf dist
+  cabal install -flaunch-docker -fwith-postgresql
+  docker build -f ./dockerfiles/Travis-CI/Dockerfile -t glob-travis/$TRAVIS_COMMIT-$TRAVIS_TAG .
+  docker push
