--- a/Glob.cabal
+++ b/Glob.cabal
@@ -248,6 +248,7 @@ executable glob
                    , src
 
   other-modules:     Main.CmdArgs
+                   , MDB
                    , Glob
                    , Glob.Config
                    , Glob.Tls
@@ -259,6 +260,7 @@ executable glob
                    , Glob.Management.TH
                    , Glob.Static
                    , Glob.Auth
+                   , Glob.Handler
 
   default-language:  Haskell2010
   ghc-options:       -Wall -O2 -threaded
