--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - "cabal update"
   - "cabal install -j9 directory process persistent-template yesod persistent-postgresql persistent-mongoDB warp-tls cmdargs SHA"
 script:
-  - cabal configure -flaunch-docker
+  - cabal configure -flaunch-docker -fwith-postgresql
   - cabal build
   - cabal sdist
   - cabal install dist/Glob-*.tar.gz -fwith-postgresql
