update and to test travis with docker

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,6 @@ after_script: |
   cabal configure -flaunch-docker -fwith-postgresql
   cabal build
   ls dist
-  ls dist/bin
+  ls dist/build/bin
   docker build -f ./dockerfiles/Travis-CI/Dockerfile -t glob-travis/$TRAVIS_BUILD_NUMBER .
   docker push
