update and to test travis with docker

--- a/dockerfiles/Travis-CI/Dockerfile
+++ b/dockerfiles/Travis-CI/Dockerfile
@@ -1,7 +1,7 @@
 FROM index.docker.io/library/haskell:7.10.3
 MAINTAINER qinka
-ADD ./dist/build/glob/glob /usr/local/bin
-ADD ./dist/build/launch.docker/launch.docker
+ADD ./dist/build/glob/glob /usr/bin
+ADD ./dist/build/launch.docker/launch.docker /usr/bin
 ADD ./resource/favicon.ico /favicon.ico
 RUN rm -r src
 EXPOSE 3000
