--- a/dockerfiles/Travis-CI/Dockerfile
+++ b/dockerfiles/Travis-CI/Dockerfile
@@ -1,4 +1,4 @@
-FROM index.docker.io/library/haskell:7.10.3
+FROM index.docker.io/library/debian:latest
 MAINTAINER qinka
 ADD ./dist/build/glob/glob /usr/bin
 ADD ./dist/build/launch.docker/launch.docker /usr/bin
