--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ after_script: |
   cabal build
   ls dist
   ls dist/build/bin
+  docker login
   docker build -f ./dockerfiles/Travis-CI/Dockerfile -t qinka/glob:$TRAVIS_BUILD_NUMBER .
   docker images
   docker push  qinka/glob
