--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ services:
   - docker
 
 before_install:
+  - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
   - "sudo add-apt-repository -y ppa:hvr/ghc"
   - "sudo apt-get update"
   - "sudo apt-get install ghc-$GHCVER cabal-install-$CABALVER"
@@ -27,9 +28,8 @@ after_script: |
   rm -rf dist
   cabal configure -flaunch-docker -fwith-postgresql
   cabal build
-  ls dist
-  ls dist/build/bin
-  docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-  docker build -f ./dockerfiles/Travis-CI/Dockerfile -t qinka/glob:$TRAVIS_BUILD_NUMBER .
-  docker images
+  docker build -f ./dockerfiles/Travis-CI/PostgreSQL/Dockerfile -t qinka/glob:postgresql-$TRAVIS_BUILD_NUMBER$TRAVIS_TAG .
+  cabal configure -flaunch-docker -fwith-mongodb
+  cabal build
+  docker build -f ./dockerfiles/Travis-CI/MongoDB/Dockerfile -t qinka/glob:mongodb-$TRAVIS_BUILD_NUMBER$TRAVIS_TAG .
   docker push  qinka/glob
