--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
 after_script: |
   echo "There should build a docker image."
   rm -rf dist
-  if [ -n $TRAVIS_TAG ]
+  if [ -n "$TRAVIS_TAG" ]? then
     export DOCKER_IMAGE_TAG=$TRAVIS_TAG-$TRAVIS_BUILD_NUMBER
   else
     export DOCKER_IMAGE_TAG=$TRAVIS_COMMIT-$TRAVIS_BUILD_NUMBER
