--- a/.travis.yml
+++ b/.travis.yml
@@ -19,22 +19,22 @@ script:
   - cabal sdist
   - cabal install dist/Glob-*.tar.gz -fwith-postgresql
   - cabal install dist/Glob-*.tar.gz -fwith-mongodb
-  - cabal install dist/Glob-*.tar.gz -flaunch-docker -flaunch-simple -fwith-postgresql
-  - cabal install dist/Glob-*.tar.gz -fwith-tls -fwith-postgresql
-  - cabal install dist/Glob-*.tar.gz -flaunch-docker -flaunch-simple -fwith-mongodb
-  - cabal install dist/Glob-*.tar.gz -fwith-tls -fwith-mongodb
+  - cabal install dist/Glob-*.tar.gz -flaunch-docker -flaunch-simple -fwith-postgresql && mkdir dsp && mv dist dsp
+  - cabal install dist/Glob-*.tar.gz -fwith-tls -fwith-postgresql -flaunch-docker -flaunch-simple && mkdir dspt && mv dist dspt
+  - cabal install dist/Glob-*.tar.gz -flaunch-docker -flaunch-simple -fwith-mongodb && mkdir dsm && mv dist dsm
+  - cabal install dist/Glob-*.tar.gz -fwith-tls -fwith-mongodb -flaunch-docker -flaunch-simple && mkdir dsmt && mv dist dsmt
 after_script: |
-  echo "There should build a docker image."
-  rm -rf dist
-  if [ -n "$TRAVIS_TAG" ]; then
-    export DOCKER_IMAGE_TAG=$TRAVIS_TAG-$TRAVIS_BUILD_NUMBER
-  else
-    export DOCKER_IMAGE_TAG=$TRAVIS_COMMIT-$TRAVIS_BUILD_NUMBER
+  if [ $TRAVIS_TEST_RESULT -eq 0]; then
+    echo "There should build a docker image."
+    rm -rf dist
+    if [ -n "$TRAVIS_TAG" ]; then
+      export DOCKER_IMAGE_TAG=$TRAVIS_TAG-$TRAVIS_BUILD_NUMBER
+    else
+      export DOCKER_IMAGE_TAG=$TRAVIS_COMMIT-$TRAVIS_BUILD_NUMBER
+    fi
+    docker build -f ./dockerfiles/Travis-CI/PostgreSQL/Dockerfile -t qinka/glob:postgresql-$DOCKER_IMAGE_TAG dsp
+    docker build -f ./dockerfiles/Travis-CI/PostgreSQL/Dockerfile -t qinka/glob:tls-postgresql-$DOCKER_IMAGE_TAG dspt
+    docker build -f ./dockerfiles/Travis-CI/MongoDB/Dockerfile -t qinka/glob:mongodb-$DOCKER_IMAGE_TAG dsm
+    docker build -f ./dockerfiles/Travis-CI/MongoDB/Dockerfile -t qinka/glob:tls-mongodb-$DOCKER_IMAGE_TAG dsmt
+    docker push  qinka/glob
   fi
-  cabal configure -flaunch-docker -fwith-postgresql
-  cabal build
-  docker build -f ./dockerfiles/Travis-CI/PostgreSQL/Dockerfile -t qinka/glob:postgresql-$DOCKER_IMAGE_TAG .
-  cabal configure -flaunch-docker -fwith-mongodb
-  cabal build
-  docker build -f ./dockerfiles/Travis-CI/MongoDB/Dockerfile -t qinka/glob:mongodb-$DOCKER_IMAGE_TAG .
-  docker push  qinka/glob
