--- a/Glob.cabal
+++ b/Glob.cabal
@@ -2,7 +2,7 @@
 -- see http://haskell.org/cabal/users-guide/
 
 name:                Glob
-version:             0.0.7.40
+version:             0.0.7.55
 synopsis:            A simple blog system.
 description:         A small and simple blog framework.
 license:             AgasaLicense
@@ -123,6 +123,10 @@ executable launch.docker
     build-depends:   directory
   else
     build-depends:   directory >=1.2 && <1.3
+
+  if flag(with-tls)
+    cpp-options:     -DWithTls
+
 
   default-language:  Haskell2010
   other-modules:     Main.CmdArgs
