--- a/dockerfiles/Travis-CI/MongoDB/Dockerfile
+++ b/dockerfiles/Travis-CI/MongoDB/Dockerfile
@@ -4,5 +4,5 @@ RUN apt-get update && apt-get -y install libgmp10
 ADD ./dist/build/glob /usr/bin/
 ADD ./dist/build/launch.docker /usr/bin
 ADD ./resource/favicon.ico /favicon.ico
-CMD launch.docker
+CMD cat /dev/null | launch.docker
 EXPOSE 3000
