--- a/Glob.cabal
+++ b/Glob.cabal
@@ -91,7 +91,7 @@ executable launch.simple
 
   other-modules:     Main.CmdArgs
   default-language:  Haskell2010
-  ghc-options:       -Wall -O2
+  ghc-options:       -Wall -O2 -threaded
 
 executable launch.docker
   main-is:           Main.hs
@@ -130,7 +130,7 @@ executable launch.docker
 
   default-language:  Haskell2010
   other-modules:     Main.CmdArgs
-  ghc-options:       -Wall -O2
+  ghc-options:       -Wall -O2 -threaded
 
 
 executable glob
