--- a/dockerfiles/Travis-CI/PostgreSQL/Dockerfile
+++ b/dockerfiles/Travis-CI/PostgreSQL/Dockerfile
@@ -1,7 +1,6 @@
 FROM index.docker.io/library/debian:latest
 MAINTAINER qinka
 RUN apt-get update && apt-get -y install libgmp10 libpq5
-ADD dist/build/glob /usr/bin/
 ADD dist/build/launch.docker /usr/bin
-CMD cat /dev/null | launch.docker
+CMD launch.docker
 EXPOSE 3000
