--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 # Glob
 
 env:
-  - CABALVER=1.22 GHCVER=7.10.3
+  - CABALVER=1.22 GHCVER=7.10.3 GLOB_DB="-fwith-postgresql" GLOB_TLS="-f-with-tls" GLOB_LA="-flaunch-docker" GLOB_DF="./dockerfiles/Travis-CI/PostgreSQL/Dockerfile" GLOB_DT="postgres"
+  - CABALVER=1.22 GHCVER=7.10.3 GLOB_DB="-fwith-postgresql" GLOB_TLS="-fwith-tls" GLOB_LA="-flaunch-docker" GLOB_DF="./dockerfiles/Travis-CI/PostgreSQL/Dockerfile" GLOB_DT="postgres-tls"
+  - CABALVER=1.22 GHCVER=7.10.3 GLOB_DB="-fwith-mongodb" GLOB_TLS="-f-with-tls" GLOB_LA="-flaunch-docker" GLOB_DF="./dockerfiles/Travis-CI/MongoDB/Dockerfile" GLOB_DT="mongodb"
+  - CABALVER=1.22 GHCVER=7.10.3 GLOB_DB="-fwith-mongodb" GLOB_TLS="-fwith-tls" GLOB_LA="-flaunch-docker" GLOB_DF="./dockerfiles/Travis-CI/MongoDB/Dockerfile" GLOB_DT="mongodb-tls"
 services:
   - docker
 
@@ -14,31 +17,26 @@ before_install:
   - "cabal update"
   - "cabal install -j9 directory process persistent-template yesod persistent-postgresql persistent-mongoDB warp-tls cmdargs SHA"
 script:
-  - cabal configure -flaunch-docker -fwith-postgresql
+  - mkdir dist
+  - cd glob-core
+  - cabal install $GLOB_DB $GLOB_TLS
+  - cd ../glob-main
+  - cabal install $GLOB_TLS
+  - cd ../glob-launcher
+  - cabal configure $GLOB_LA $GLOB_TLS
   - cabal build
-  - cabal sdist
-  - cabal install dist/Glob-*.tar.gz -fwith-postgresql
-  - cabal install dist/Glob-*.tar.gz -fwith-mongodb
-  - cabal install dist/Glob-*.tar.gz -flaunch-docker -flaunch-simple -fwith-postgresql && mkdir dsp && cp -r dist dsp
-  - cabal install dist/Glob-*.tar.gz -fwith-tls -fwith-postgresql -flaunch-docker -flaunch-simple && mkdir dspt && cp -r dist dspt
-  - cabal install dist/Glob-*.tar.gz -flaunch-docker -flaunch-simple -fwith-mongodb && mkdir dsm && cp -r dist dsm
-  - cabal install dist/Glob-*.tar.gz -fwith-tls -fwith-mongodb -flaunch-docker -flaunch-simple && mkdir dsmt && cp -r dist dsmt
+  - cp -r dist  ../dist
+  - cd ..
 after_script: |
   if [ $TRAVIS_TEST_RESULT -eq 0 ]; then
     echo "There should build a docker image."
     rm -rf dist
     if [ -n "$TRAVIS_TAG" ]; then
-      export DOCKER_IMAGE_TAG=$TRAVIS_TAG-$TRAVIS_BUILD_NUMBER
+      export DOCKER_IMAGE_TAG=$GLOB_DT-$TRAVIS_TAG-$TRAVIS_BUILD_NUMBER
     else
-      export DOCKER_IMAGE_TAG=$TRAVIS_COMMIT-$TRAVIS_BUILD_NUMBER
+      export DOCKER_IMAGE_TAG=$GLOB_DT-$TRAVIS_COMMIT-$TRAVIS_BUILD_NUMBER
     fi
-    cp ./dockerfiles/Travis-CI/PostgreSQL/Dockerfile dsp
-    cp ./dockerfiles/Travis-CI/PostgreSQL/Dockerfile dspt
-    cp ./dockerfiles/Travis-CI/MongoDB/Dockerfile dsm
-    cp ./dockerfiles/Travis-CI/MongoDB/Dockerfile dsmt
-    cd dsp && docker build -f Dockerfile -t qinka/glob:postgresql-$DOCKER_IMAGE_TAG . && cd ..
-    cd dspt && docker build -f Dockerfile -t qinka/glob:tls-postgresql-$DOCKER_IMAGE_TAG . && cd ..
-    cd dsm && docker build -f Dockerfile -t qinka/glob:mongodb-$DOCKER_IMAGE_TAG . && cd ..
-    cd dsmt && docker build -f Dockerfile -t qinka/glob:tls-mongodb-$DOCKER_IMAGE_TAG . && cd ..
+    cp $GLOB_DF dist
+    cd dist && docker build -f Dockerfile -t qinka/glob:$DOCKER_IMAGE_TAG . && cd ..
     docker push  qinka/glob
   fi
