--- a/stack.yaml
+++ b/stack.yaml
@@ -2,11 +2,13 @@
 # For more information, see: http://docs.haskellstack.org/en/stable/yaml_configuration/
 
 # Specifies the GHC version and set of packages available (e.g., lts-3.5, nightly-2015-09-21, ghc-7.10.2)
-resolver: lts-5.6
+resolver: lts-5.9
 
 # Local packages, usually specified by relative directory name
 packages:
-- '.'
+- glob-core/
+- glob-launcher/
+- glob-main/
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
 extra-deps:
   - aeson-0.10.0.0
@@ -16,14 +18,11 @@ extra-deps:
 
 # Override default flag values for local packages and extra-deps
 flags:
-  Glob:
-    unlimit-version: false
+  glob-core:
+    unlimit-version: true
 
 # Extra package databases containing global packages
 extra-package-dbs: []
-
-# Messages for User
-user-message: ! 'Warning: You have to choose only a flags from "with-mongodb", or "with-postgresql".  If you do not, IT MUST BE FAILED.'
 
 # Control whether we use the GHC we find on the path
 # system-ghc: true
