--- a/daocloud.yml
+++ b/daocloud.yml
@@ -1,27 +1,32 @@
+# Glob
 image: daocloud/ci-gcc:5
-
 env:
-  - CABALVER=1.22 GHCVER=7.10.2
+  - CABALVER=1.22 GHCVER=7.10.3 GLOB_DB="-fwith-postgresql" GLOB_TLS="-f-with-tls" GLOB_LA="-flaunch-docker" GLOB_DF="./dockerfiles/Travis-CI/PostgreSQL/Dockerfile" GLOB_DT="postgres"
+  - CABALVER=1.22 GHCVER=7.10.3 GLOB_DB="-fwith-postgresql" GLOB_TLS="-fwith-tls" GLOB_LA="-flaunch-docker" GLOB_DF="./dockerfiles/Travis-CI/PostgreSQL/Dockerfile" GLOB_DT="postgres-tls"
+  - CABALVER=1.22 GHCVER=7.10.3 GLOB_DB="-fwith-mongodb" GLOB_TLS="-f-with-tls" GLOB_LA="-flaunch-docker" GLOB_DF="./dockerfiles/Travis-CI/MongoDB/Dockerfile" GLOB_DT="mongodb"
+  - CABALVER=1.22 GHCVER=7.10.3 GLOB_DB="-fwith-mongodb" GLOB_TLS="-fwith-tls" GLOB_LA="-flaunch-docker" GLOB_DF="./dockerfiles/Travis-CI/MongoDB/Dockerfile" GLOB_DT="mongodb-tls"
 
 install:
-  - add-apt-repository -y ppa:hvr/ghc
-  - echo "deb http://apt.postgresql.org/pub/repos/apt/ trusty-pgdg main" > /etc/apt/sources.list.d/pgdg.list
-  - wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
-  - apt-get update
-  - apt-get -y install cabal-install-$CABALVER ghc-$GHCVER postgresql-9.4
-  - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
-  - cabal sandbox init
-  - cabal update
-  - cabal install -j9 directory process persistent-template yesod persistent-postgresql persistent-mongoDB warp-tls cmdargs
+  - "sudo add-apt-repository -y ppa:hvr/ghc"
+  - "sudo apt-get update"
+  - "sudo apt-get -y install ghc-$GHCVER cabal-install-$CABALVER"
+  - "export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH"
+  - "cabal update"
+  - "cabal install -j9 directory process persistent-template yesod persistent-postgresql persistent-mongoDB warp-tls cmdargs SHA"
+
 before_script:
   - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
-  - echo $PATH
-  - which cabal
+
+  
 script:
   - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
-  - echo $PATH
-  - which cabal
-  - cabal install -j9 -flaunch-docker -flaunch-simple -fwith-tls -fwith-postgresql
-  - cabal install -j9 -flaunch-docker -flaunch-simple -fwith-postgresql
-  - cabal install -j9 -flaunch-docker -flaunch-simple -fwith-tls -fwith-mongodb
-  - cabal install -j9 -flaunch-docker -flaunch-simple -fwith-mongodb
+  - mkdir dist
+  - cd glob-core
+  - cabal install $GLOB_DB $GLOB_TLS
+  - cd ../glob-main
+  - cabal install $GLOB_TLS
+  - cd ../glob-launcher
+  - cabal configure $GLOB_LA $GLOB_TLSA
+  - cabal build
+  - cp -r dist  ../dist
+  - cd ..
