--- a/glob-main/glob-main.cabal
+++ b/glob-main/glob-main.cabal
@@ -37,7 +37,23 @@ library
   if flag(unlimit-version)
     build-depends:   yaml
   else
-    build-depends:    yaml >= 0.8 && < 0.10
+    build-depends:   yaml >= 0.8 && < 0.10
+  if flag(unlimit-version)
+    build-depends:   monad-logger
+  else
+    build-depends:   monad-logger >= 0.3 && < 0.4
+  if flag(unlimit-version)
+    build-depends:   template-haskell
+  else
+    build-depends:   template-haskell >= 2.10 && < 2.12
+  if flag(unlimit-version)
+    build-depends:   warp
+  else
+    build-depends:   warp >= 3.2 && < 3.4
+  if flag(unlimit-version)
+    build-depends:   bytestring
+  else
+    build-depends:   bytestring > 0.10.5 && < 0.11
   hs-source-dirs:    src
   default-language:  Haskell2010
   ghc-options:       -Wall -O2 -threaded
