--- a/glob-launcher/glob-launcher.cabal
+++ b/glob-launcher/glob-launcher.cabal
@@ -2,7 +2,7 @@
 --  documentation, see http://haskell.org/cabal/users-guide/
 
 name:                glob-launcher
-version:             0.0.8.0
+version:             0.0.8.1
 synopsis:            The launcher of Glob.
 description:         The launcher of Glob.
 license:             AgasaLicense
@@ -23,6 +23,16 @@ flag launch-docker
   description:       Build the launcher of docker
   default:           False
 
+
+flag with-postgresql
+  description:       Use PostgreSQL for database
+  default:           False
+
+flag with-mongodb
+  description:       Use MongoDB for database
+  default:           False
+
+
 executable launch.docker
   main-is:             Main.hs
   other-modules:       Main.CmdArgs
@@ -30,8 +40,8 @@ executable launch.docker
   build-depends:       base >=4.8 && <4.9
                      , yaml
                      , cmdargs
-                     , glob-core == 0.0.8.0
-                     , glob-main == 0.0.8.0
+                     , glob-core == 0.0.8.1
+                     , glob-main == 0.0.8.1
   hs-source-dirs:      launch.docker
   default-language:    Haskell2010
   ghc-options:       -Wall -O2 -threaded
